--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>Kathy Gonzalez</title>
 </head>
+<!-- Contenedor padre -->
 <body>
     
     
@@ -27,6 +28,7 @@
     </nav>
 
     <section id="section1">
+        <!-- Breve presentacion -->
         <div class="foto-section1">
             <img src="/images/presen-2.jpg" alt="">
         </div>
