Cambio en longitud de fechas

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </div>
         <div class="fechas">
             <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias aut, ab magni aliquid tempora necessitatibus autem fugiat modi quasi praesentium.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias aut, ab magni aliquid tempora necessitatibus autem fugiat modi quasi praesentium.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias aut, ab magni aliquid tempora necessitatibus autem fugiat modi quasi praesentium.</li>
-                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias aut, ab magni aliquid tempora necessitatibus autem fugiat modi quasi praesentium.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
             </ul>
         </div>
     </section>
