--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">INICIO</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
+            <li>
+                <a href="index.html">INICIO</a>
+            </li>
+            <li>
+                <a href="contacto.html">CONTACTO</a>
+            </li>
         </ul>
     </nav>
 
